# django-mongo-backend

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  manage.py  pyproject.toml
.github/workflows/: test.yaml  test_and_release.yaml
django_mongodb/: compiler.py  cursor.py  fields.py  models.py  operations.py  query.py
refapp/: apps.py  models.py
refapp/migrations/: 0001_initial.py  0002_refmodel_json.py
test/: conftest.py  test_databasewrapper.py  test_decimal_field_compatibility.py  test_models.py
testapp/: admin.py  apps.py  models.py
testapp/migrations/: 0001_initial.py  0002_testmodel_json_field_testmodel_name_testmodel_name2.py  0003_rename_testmodel_dummymodel.py  0004_remove_dummymodel_json_field_remove_dummymodel_name2.py  0005_alter_dummymodel_id.py  0006_foomodel_relatedmodel_delete_dummymodel_and_more.py
testproject/: router.py  settings.py
